# extract_tac

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
extac/: cli.py  extract_tacs.py  io.py  mask.py  utils.py  wrapper.py
extac/tests/: test_mask.py
src/tests/: test_mask.py
tests/: test_extract_tacs.py  test_mask.py  test_utils.py
