[tool.poetry]
name = "extract-tac"
version = "0.1.0"
description = "A simple CLI to extract regional values and time activity curves"
authors = ["RDoerfel <doerfelruben@aol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
