[tool.poetry]
name = "extac"
version = "0.1.0"
description = "A simple CLI to extract regional values and time activity curves"
authors = ["RDoerfel <doerfelruben@aol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nibabel = "^5.3.2"
nilearn = "^0.11.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"

[tool.poetry.scripts]
extract_tacs = "extac.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["extac"]

[tool.coverage.run]
branch = true
source = ["extac"]

[tool.coverage.report]
show_missing = true
